-----------
Wed Apr 25 00:17:41 NOVST 2001
max (patch from kees):
* fixed CarbonRule NOT
* changed default behaviour of carbonrule, see hpt.texi

----- cvs ci ------
Wed Apr 18 23:24:50 CEST 2001
tobi:
* new keywords: autofilecreatesubdirs and autoareacreatesubdirs
  for creating /filebase/gfd/app/comm/ instead of /filebase/gdb.app.comm/

----- cvs ci ------
Sat Apr 14 12:44:20 NOVST 2001
max (patch from Alex Bronin):
* fixed core dump while parsing filearea

----- cvs ci ------
Thu Apr 12 12:12:34 NOVST 2001
max (patch from kees):
* added CarbonRule, CarbonGroups, CarbonFromArea

----- cvs ci ------
Sat Apr  7 17:41:59 NOVST 2001
max (patch from Kees Bergwerf):
* echoareadefaults, fileareadefaults

----- cvs ci ------
Thu Apr  5 22:58:02 NOVST 2001
max (patches from Kostya Krasavin):
* fc2aed, fc2ged, fc2msged new command line parameners

----- cvs ci ------
Sat Mar 31 16:12:27 NOVST 2001
max:
* it is possible to set several Carbon(To|From|Subj|etc) before
  CarbonCopy or CarbonMove (Kees Bergwerf)

----- cvs ci ------
Wed Mar 28 18:02:13 NOVST 2001
max:
* fix deleting last char of the last line while parsing under win32
* remove dumpfcfg

----- cvs ci ------
Thu Mar 22 21:04:53 NOVT 2001
max:
* readLine() & trimLine() clean up (thanx to Kees Bergwerf)

----- cvs ci ------
Sun Mar 18 21:54:57 NOVT 2001
max:
* fixed fconf2golded: set "0" group if not exist

----- cvs ci ------
Fri Mar 16 13:18:46 NOVT 2001
max:
* fixed segfault of fconf2golded on areas with no area group

----- cvs ci ------
Tue Mar 13 00:07:22 NOVT 2001
max:
* fixed segfault when parsing unknown echoarea link

----- cvs ci ------
Sun Mar 11 15:31:48 NOVT 2001
max:
* minDiskFreeSpace token for hpt

----- cvs ci ------
Sat Mar 10 23:09:47 MEZ 2001
tobi:
* Rewrote the parser core function parseLine. Replaced the endless
  if/elseif chain with a bsearch lookup and a consecutive switch/case
  construct. This should give a performance gain both in terms of
  compile time as well as in terms of run time.